# avow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
avow/: adjudicator.py  backtranslation.py  budget.py  builder.py  calibration.py  calibration_benchmark.py  calibration_gauntlet.py  checks.py  cli.py  config.py  coroner.py  gauntlet.py  graveyard.py  harden.py  ideator.py  improve.py  loop.py  mutation.py  openrouter.py  oracle.py  panel.py  population.py  properties.py  realcorpus.py  report.py  runner.py  survive.py  workspace.py
docs/plans/: 2026-06-26-forge-v1-skeleton.md  2026-06-26-forge-v2.1-mutation-testing.md  2026-06-26-forge-v2.2-back-translation.md  2026-06-26-forge-v2.3-confidence-aggregation.md  2026-06-26-forge-v2.4-property-tests.md  2026-06-26-forge-v2.5-cross-model-panel.md  2026-06-26-hermit-v1-skeleton.md  (+27 more)
forge/: backtranslation.py  builder.py  cli.py  confidence.py  config.py  examiner.py  harden.py  ideator.py  improve.py  loop.py  memory.py  mutation.py  oracle.py  panel.py  population.py  properties.py  runner.py  scoring.py  supervisor.py
hermit/: adjudicator.py  builder.py  calibration.py  calibration_benchmark.py  checks.py  cli.py  config.py  examiner.py  harden.py  ideator.py  improve.py  loop.py  mutation.py  oracle.py  panel.py  population.py  properties.py  realcorpus.py  report.py  runner.py
tests/: test_adjudicator.py  test_backtranslation_judge.py  test_backtranslation_run.py  test_backtranslation_translate.py  test_budget.py  test_builder.py  test_calibration.py  test_calibration_family.py  test_calibration_gauntlet.py  test_calibration_proof.py  test_checks.py  test_cli.py  test_cli_adjudicate.py  test_cli_calibrate.py  test_cli_check.py  test_cli_harden.py  test_cli_improve.py  test_cli_intent.py  test_cli_mutate.py  test_cli_oracle.py  test_cli_population.py  test_cli_propertize.py  test_cli_solve_integration.py  test_cli_supervise.py  test_cli_survive.py  test_cli_verify.py  test_confidence.py  test_config.py  test_coroner.py  test_examiner.py  test_examiner_adversarial.py  test_gauntlet.py  test_graveyard.py  test_harden.py  test_ideator.py  test_improve.py  test_loop.py  test_memory.py  test_mutation_ast.py  test_mutation_hybrid.py  (+18 more)
(+37 files in other folders)
