[project]
name = "forge"
version = "0.1.0"
description = "Autonomous build-and-improve loop"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-json-report>=1.5"]

[project.scripts]
forge = "forge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge*"]
