[project]
name = "avow"
version = "0.1.0"
description = "An autonomous build-and-verify loop that reports calibrated confidence in AI-generated code"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "qatcod" }]
keywords = ["ai", "code-generation", "testing", "mutation-testing", "verification", "llm", "calibration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.69",
    "hypothesis>=6.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-json-report>=1.5"]

[project.urls]
Homepage = "https://github.com/qatcod/avow"
Repository = "https://github.com/qatcod/avow"
Issues = "https://github.com/qatcod/avow/issues"

[project.scripts]
avow = "avow.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["avow*"]
